update formspree details

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,10 +26,10 @@ post_settings:
 
 contact_settings:
   email_address: ''
-  form_action: 'https://formspree.io/hello@jekyllthemes.io'
+  form_action: 'https://formspree.io/f/myybnodp'
   confirmation_url: '/thanks'
   email_subject: 'Contact form submission'
-  send_button_text: 'Get in Touch'
+  send_button_text: 'Submit intelligence'
 
 social_settings:
   facebook_url: ''
