--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -70,6 +70,17 @@ color_settings:
   error_color: '#D64541'
 
 font_settings:
+  # font_embed: '<link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">'
+  font_embed: '<style type="text/css">
+     @font-face {
+       font-family: 'Conv_SansForgetica-Regular';
+       src: url('Fonts/SansForgetica-Regular.eot');
+       src: local('☺'), url('Fonts/SansForgetica-Regular.woff') format('woff'), url('Fonts/SansForgetica-Regular.ttf') format('truetype'), url('Fonts/SansForgetica-Regular.svg') format('svg');
+       font-weight: normal;
+       font-style: normal;
+      }
+</style>'
+  # title_font: '"Muli", sans-serif'
   font_embed: '<link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700|Ubuntu+Mono:400,700" rel="stylesheet">'
   title_font: 'Rubik, sans-serif'
   body_font: '"Ubuntu Mono", sans-serif'
