--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -81,9 +81,11 @@ font_settings:
       }
 </style>'
   # title_font: '"Muli", sans-serif'
-  font_embed: '<link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700|Ubuntu+Mono:400,700" rel="stylesheet">'
-  title_font: 'Rubik, sans-serif'
-  body_font: '"Ubuntu Mono", sans-serif'
+  # font_embed: '<link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700|Ubuntu+Mono:400,700" rel="stylesheet">'
+  # title_font: 'Rubik, sans-serif'
+  # body_font: '"Ubuntu Mono", sans-serif'
+  title_font: 'Conv_SansForgetica-Regular'
+  body_font: 'Conv_SansForgetica-Regular'
   regular_weight: 400
   bold_weight: 700
   site_title:
