--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -72,10 +72,9 @@ color_settings:
 font_settings:
   # font_embed: '<link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">'
   font_embed: '<style type="text/css">
-     @font-face {
-       font-family:'Conv_SansForgetica-Regular';
-       src:url('Fonts/SansForgetica-Regular.eot');
-       src:local('☺'), url('Fonts/SansForgetica-Regular.woff') format('woff'), url('Fonts/SansForgetica-Regular.ttf') format('truetype'), url('Fonts/SansForgetica-Regular.svg') format('svg');
+    @font-face {
+      font-family:"Conv_SansForgetica-Regular";
+      src:url("Fonts/SansForgetica-Regular.woff") format("woff");
       }
 </style>'
   # title_font: '"Muli", sans-serif'
